--- a/src/components/block-list/_block-list.scss
+++ b/src/components/block-list/_block-list.scss
@@ -5,7 +5,7 @@
   }
   &.autoSize{flex-basis: 33.33%; min-width: 300px; flex-grow: 1; max-width: 100%;}
 }
-.block-list__wrapper{max-width: 100%; margin-bottom: $spacing; padding: $spacing; width: 100%;
+.block-list__wrapper{max-width: 100%; margin-bottom: $spacing; padding: $spacing; width: 100%; overflow: hidden;
   @include media-max(xs){margin-bottom: $spacing/2; padding: $spacing/2;}
   @extend
   %paper,
@@ -22,6 +22,7 @@
 .block-list__figure{@extend %img-container; margin-bottom: 0;}
 
 .block-list__content{padding: $spacing; position: relative; z-index: 1; flex-grow: 1; @include flex-container(column,wrap,center);
+  @include media-max(xs){ padding: $spacing/2;}
   & p:last-of-type{margin-bottom: 0.2rem;}
 }
 
@@ -30,6 +31,7 @@
   &>div{font-size: 0.8rem; padding: 0.5rem;}
 }
 .block-list__headline{ margin-bottom: -$spacing;
+  @include media-max(xs){ margin-bottom: -$spacing/2;}
   .headline--outer .block-list__figure+&{opacity: 1; position: absolute; left: 0;right: 0; top:0; margin: auto; line-height: 1;
     &>div{ font-weight: bold; font-size: 0.6rem; text-transform: uppercase;  background-color: color(white);
       &:first-child{left:0; border-bottom-right-radius: $radius*2;}
@@ -39,6 +41,7 @@
   .headline--disable &{display: none;}
 }
 .block-list__footer{margin-top: -$spacing; flex-direction: row-reverse; z-index: 1;
+  @include media-max(xs){ margin-top: -$spacing/2;}
   .footer--disable &{display: none;}
 }
 
